# SecureShare

./: CMakeLists.txt  README.md
include/: socket.h
src/auth/: CMakeLists.txt  auth.cpp
src/client/: CMakeLists.txt  client.cpp
src/crypto/: CMakeLists.txt  crypto.cpp
src/gui/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  server.cpp
src/storage/: CMakeLists.txt  storage.cpp
